--- a/style.css
+++ b/style.css
@@ -20,7 +20,6 @@ li {
 
 li a {
     display: block;
-    /*color: white;*/
     text-align: center;
     padding: 16px;
     text-decoration: none;
@@ -34,40 +33,9 @@ li a {
     padding: 0;
 }
 
-/*Add button css*/
-.cssbuttons-io-button {
-    display: flex;
-    align-items: center;
-    font-family: inherit;
-    font-weight: 500;
-    font-size: 16px;
-    padding: 0.7em 1.4em 0.7em 1.1em;
-    color: white;
-    background: #ad5389;
-    background: linear-gradient(0deg, rgba(20,167,62,1) 0%, rgba(102,247,113,1) 100%);
-    border: none;
-    box-shadow: 0 0.7em 1.5em -0.5em #14a73e98;
-    letter-spacing: 0.05em;
-    border-radius: 20em;
-}
-
-.cssbuttons-io-button svg {
-    margin-right: 6px;
-}
-
-.cssbuttons-io-button:hover {
-    box-shadow: 0 0.5em 1.5em -0.5em #14a73e98;
-}
-
-.cssbuttons-io-button:active {
-    box-shadow: 0 0.3em 1em -0.5em #14a73e98;
-}
-
-
-
 /* css list game */
 #list-game {
-    padding: 0 150px;
+    padding: 0 120px;
 }
 /* css info table to add game */
 #infoTable {
@@ -82,7 +50,7 @@ li a {
     border: 2px solid black;
     text-align: center;
 }
-
+/* css cart */
 #cart-frame {
     position: fixed;
     top: 37%;
@@ -93,4 +61,11 @@ li a {
     background-color: rgba(0, 0, 0, 0.5);
     border: 1px solid black;
     overflow: auto;
+}
+footer {
+    background-color: chartreuse;
+    color: blue;
+}
+#filterArea {
+margin-left: 500px;
 }
