--- a/style.css
+++ b/style.css
@@ -53,12 +53,12 @@ li a {
 /* css cart */
 #cart-frame {
     position: absolute;
-    top: 37%;
-    left: 94%;
-    transform: translate(-50%, -50%);
-    width: 200px;
-    height: 400px;
-    background-color: rgba(234, 230, 230, 0.71);
+    top: 10%;
+    left: 80%;
+    /*transform: translate(-50%, -50%);*/
+    width: 300px;
+    height: 600px;
+    background-color: white;
     border: 1px solid black;
     overflow: auto;
 }
